# GameShop

./: docker-compose.yml  pyproject.toml
app/: Dockerfile  alembic.ini  main.py
app/api/: __init__.py  dependencies.py  user_router.py
app/api/crud/: crud_func.py
app/api/routers/: favorite_router.py  items_router.py  login_router.py  register_router.py  user_router.py
app/core/: auth.py  config.py
app/core/models/: Items.py  __init__.py  favorite.py  photo.py  refresh_token.py  user.py
app/core/shemas/: ItemShema.py  PaginationShema.py  UserShema.py
app/migration/: env.py
app/migration/versions/: 2025_12_03_1224-48c025f2f15b_create_items_table.py  2025_12_04_1530-d17fdd6ec293_create_users_table_relationship_with_.py  2025_12_08_1213-6a8284a5a4d3_add_password_in_user_table.py  2026_02_09_1204-8cefe7c290f7_update_item_table.py  2026_02_11_1351-8852da05a888_create_favorite_table.py  2026_03_03_1112-85d182772284_create_refresh_tokens_table.py  2026_03_04_1047-9a14ff8ca21a_add_image_url_to_items.py  2026_03_30_1133-6c134777e346_create_photo.py
frontend/: Dockerfile  nginx.conf  package-lock.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: axios.js
frontend/src/components/: ErrorDisplay.jsx  Header.jsx  ItemCard.jsx  Loader.jsx  Pagination.jsx  SearchBar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: CreateItem.jsx  EditItem.jsx  Favorites.jsx  Home.jsx  ItemDetail.jsx  ItemPage.jsx  Login.jsx  ManageItems.jsx  Register.jsx
