[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.10"
fastapi = "^0.123.5"
uvicorn = {extras = ["standart"], version = "^0.38.0"}
sqlalchemy = "^2.0.44"
alembic = "^1.17.2"
asyncpg = "^0.31.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.12.0"
python-jose = "^3.5.0"
bcrypt = "4.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
